--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.9",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "cookie-js": "^0.0.1",
     "form-data": "^4.0.0",
     "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "proxy": "2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
