--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "proxy": "2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "^5.0.1",
+    "react-web-share": "^2.0.2",
     "styled-components": "^6.1.2",
     "swiper": "^11.0.5",
     "tailwindcss": "^3.4.0",
